<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bath Touch</string>
    <string name="action_settings">Settings</string>
    <string name="shared_preferences">BATHTOUCHPREFERENCES</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_submit_score">Submit Match Score</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="button_login">Sign in</string>
    <string name="button_next">Next</string>
    <string name="button_anonymous_sign_in">Skip Sign in</string>
    <string name="button_no_account">Or create a new account</string>
    <string name="button_forgot_password">Forgotten password?</string>

    <string name="forgot_token_hint">Enter your reset token</string>
    <string name="forgot_password_hint">Enter your new password</string>
    <string name="forgot_repassword_hint">Re-enter your new password</string>

    <string name="title_activity_create_account">Create an account</string>
    <string name="create_account_email_hint">Enter your email</string>
    <string name="create_account_name_first_hint">Enter your first name</string>
    <string name="create_account_name_second_hint">Enter your surname</string>
    <string name="create_account_username_hint">Pick a username</string>
    <string name="create_account_password_hint">Pick a password</string>
    <string name="create_account_repassword_hint">Retype password</string>
    <string name="create_account_team_hint">Pick a team</string>
    <string name="button_create_account">Create account</string>

    <string-array name="team_array">
        <item>Team Mercury</item>
        <item>Team Venus</item>
        <item>Team Earth</item>
        <item>Team Mars</item>
        <item>Team Jupiter</item>
        <item>Team Saturn</item>
        <item>Team Uranus</item>
        <item>Team Neptune</item>
    </string-array>

    <string name="title_activity_submit_score_other">SubmitScoreOtherActivity</string>
    <string name="title_activity_activity_scrolll">activity_scrolll</string>
    <string name="title_activity_list_activity">Home</string>
    <string name="title_activity_team_results">Team Results</string>
    <string name="title_activity_league_table">League Tables</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">League Tables</string>
    <string name="title_section3">Team Results</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="account_create_ref_warning">Would you like to be included in the referee rota? This will mean you can be automatically assigned to referee a match by the system.</string>
    <string name="account_create_email_disclaimer">Disclaimer: Bath Touch won\'t use your email for anything besides player registration and communication with you. It will not be given to any third parties.</string>
    <string name="account_creation_notification_text">Receive requests from other teams who are in need of extra players</string>
    <string name="menu_submit_score">Submit score</string>

</resources>
