<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="company.businessinc.bathtouch.CreateAccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_height="224dp"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="2dp"
        app:title="Create an account"
        app:titleMarginBottom="8dp"
        android:gravity="bottom"
        app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:titleMarginStart="40dp">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp">


        <ImageView
            android:src="@drawable/ic_launcher"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/create_account_boxes"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="32dp"
        android:layout_below="@+id/toolbar_login">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/create_account_name_hint"
            android:inputType="textNoSuggestions"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/create_account_email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/create_account_username_hint"
            android:inputType="textNoSuggestions"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/create_account_password_hint"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/button_create_account"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_create_account"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:onClick="create_account"
            android:layout_height="48dp" />

    </LinearLayout>

</RelativeLayout>
