<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_height="224dp"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="2dp"
        app:title="Log in to Bath Touch"

        app:titleMarginBottom="8dp"
        android:gravity="bottom"
        app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:titleMarginStart="40dp">
        </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp">


        <ImageView
            android:src="@drawable/ic_launcher"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_boxes"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="32dp"
        android:layout_below="@+id/toolbar_login">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/login_username_hint"
            android:inputType="textNoSuggestions"
            android:layout_marginBottom="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_login"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:onClick="login_as_user"
            android:layout_height="48dp" />

    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:background="@color/grey"
        android:elevation="2dp">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:text="@string/button_login_anon"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_height="48dp" />


        </LinearLayout>
</RelativeLayout>