<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <requestFocus/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/fragment_sign_in_start_bottom_bar"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_login"
                android:layout_height="224dp"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="2dp"
                app:title="Sign in to Bath Touch"
                app:titleMarginBottom="8dp"
                android:gravity="bottom"
                app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                app:titleMarginStart="40dp"
                >
            </android.support.v7.widget.Toolbar>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp" >

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/fragment_sign_in_start_boxes"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="32dp"
                android:layout_below="@+id/toolbar_login">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/fragment_sign_in_start_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username_hint"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    app:met_floatingLabel="highlight"/>

                <Button
                    android:id="@+id/fragment_sign_in_start_button_no_account"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/button_no_account"
                    android:textSize="14sp"
                    android:textColor="@color/primary"
                    android:layout_height="48dp"
                    android:padding="0dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/fragment_sign_in_start_button_anonymous"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:text="@string/button_anonymous_sign_in"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:layout_height="48dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="80dp"
                android:padding="0dp"
                android:layout_below="@+id/fragment_sign_in_start_boxes"/>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/fragment_sign_in_start_bottom_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:background="@color/gray_background"
        android:elevation="2dp">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/fragment_sign_in_start_button_skip_next"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:text="@string/button_next"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_height="48dp"/>


    </LinearLayout>

</RelativeLayout>