<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <requestFocus/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/fragment_create_account_email_bottom_bar"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_login"
                android:layout_height="224dp"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="2dp"
                app:title="Create an account"
                app:titleMarginBottom="8dp"
                android:gravity="bottom"
                app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                app:titleMarginStart="40dp"
                >
            </android.support.v7.widget.Toolbar>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp" >

                <ImageView
                    android:src="@drawable/ic_launcher"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/fragment_create_account_email_boxes"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="32dp"
                android:layout_below="@+id/toolbar_login">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/fragment_create_account_email_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_account_email_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    app:met_floatingLabel="highlight"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="32dp"
                    android:text="@string/account_create_email_disclaimer"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/fragment_create_account_email_bottom_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:background="@color/gray_background"
        android:elevation="2dp">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/fragment_create_account_email_button_skip_next"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:text="@string/button_next"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_height="48dp"/>


    </LinearLayout>

</RelativeLayout>