<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="company.businessinc.bathtouch.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/activity_forgot_password_bottom_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_login"
                android:layout_height="224dp"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="2dp"
                app:title="Reset your password"
                app:titleMarginBottom="8dp"
                android:gravity="bottom"
                app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                app:titleMarginStart="40dp">
            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:id="@+id/login_boxes"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="32dp"
                android:layout_below="@+id/toolbar_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="You should have received an email containing your password reset token, enter it below along with your new password"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/activity_forgot_password_token_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_token_hint"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    app:floatingLabel="highlight"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/activity_forgot_password_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_password_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    app:floatingLabel="highlight"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/activity_forgot_password_repassword_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_repassword_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    app:floatingLabel="highlight"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/activity_forgot_password_bottom_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:background="@color/grey"
        android:elevation="2dp">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/activity_forgot_password_button_reset"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_height="48dp"
            android:text="Reset"/>


    </LinearLayout>

</RelativeLayout>
