<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
            android:id="@+id/settings_item_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:paddingBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Notification Settings "
                    android:layout_marginLeft="8dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/text_notification_settings"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_creation_notification_text"
                    android:layout_marginLeft="8dp"
                    android:layout_below="@+id/text_notification_settings"
                    android:layout_toStartOf="@+id/settings_item_notification_checkbox"
                    android:layout_toLeftOf="@+id/settings_item_notification_checkbox"/>
            <CheckBox
                    android:id="@+id/settings_item_notification_checkbox"
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/settings_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_item_notifications"
            android:clickable="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground">
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:background="#E0E0E0"
              android:layout_alignParentTop="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:layout_below="@+id/toolbar_login">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Your name"
                    android:id="@+id/textView3"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/settings_item_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    app:met_floatingLabel="highlight"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/settings_item_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_below="@id/settings_item_name"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground">
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:background="#E0E0E0"
              android:layout_alignParentTop="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:layout_below="@+id/toolbar_login">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Gender"
                    android:id="@+id/textView4"/>
            <Spinner
                    android:id="@+id/settings_item_gender_spinner"
                    style="@style/Widget.AppTheme.HeaderBar.Spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/settings_item_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_below="@id/settings_item_gender"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground">
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:background="#E0E0E0"
              android:layout_alignParentTop="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:layout_below="@+id/toolbar_login">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Your email"
                    android:id="@+id/textView5"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/settings_item_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_account_email_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    app:met_floatingLabel="highlight"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/account_create_email_disclaimer"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/settings_item_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_below="@id/settings_item_email"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground">
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:background="#E0E0E0"
              android:layout_alignParentTop="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:layout_below="@+id/toolbar_login">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Team"
                    android:id="@+id/textView6"/>
            <Spinner
                    android:id="@+id/settings_item_team_spinner"
                    style="@style/Widget.AppTheme.HeaderBar.Spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/settings_item_referee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_below="@id/settings_item_team"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground">
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:background="#E0E0E0"
              android:layout_alignParentTop="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="8dp">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_create_ref_warning"
                    android:id="@+id/textView7" android:layout_below="@+id/textView8"
                    android:layout_toLeftOf="@+id/settings_item_ref_checkbox"
                    android:layout_toStartOf="@+id/settings_item_ref_checkbox"/>
            <CheckBox
                    android:id="@+id/settings_item_ref_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView8" android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Are you a referee?"
                    android:id="@+id/textView8"
                    android:layout_alignParentTop="true" android:layout_alignLeft="@+id/textView7"
                    android:layout_alignStart="@+id/textView7"/>
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>